--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^4.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "xrpl": "^3.1.0",
     "xumm": "^1.7.7"
   },
