--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.7.2",
     "daisyui": "^4.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
