--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.2",
     "daisyui": "^4.12.2",
+    "pinata": "^0.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
