--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.2",
     "daisyui": "^4.12.2",
